--- a/boards/shields/nice_oled/CMakeLists.txt
+++ b/boards/shields/nice_oled/CMakeLists.txt
@@ -44,6 +44,7 @@ if(CONFIG_ZMK_DISPLAY AND CONFIG_NICE_VIEW_WIDGET_STATUS)
     zephyr_library_sources(assets/vim.c)
     zephyr_library_sources(assets/vip_marcos.c)
     zephyr_library_sources(assets/pokemon.c)
+    zephyr_library_sources(assets/necoarc.c)
     zephyr_library_sources(widgets/animation.c)
     zephyr_library_sources(widgets/screen_peripheral.c)
   endif()
